# owl-llm

./: .gitignore  Dockerfile  LICENSE  README.md  build.sh  docker-compose.yml  pyproject.toml  requirements-dev.txt  run-example.sh  setup.py  test-docker.sh
.claude/: settings.local.json
.devcontainer/: devcontainer.json
cwl/: conversation-workflow.cwl  llama-cpp-tool.cwl
examples/: code-generation.yml  conversation.yml  simple-prompt.yml
src/owl_llm/: __init__.py  cli.py
